# weather-microservice-demo

./: .gitignore  README.md  dataframe.dbf  pyproject.toml
app/extract/: fetch_weather_gridpoints.py
app/load/: load_gridpoints.py
app/utils/: create_grid.py  create_grids.py  grid_utils.py  log_config.py  process_gridpoints.py
src/database/: create_schema_gridpoints.py  timescale_db_connection.py
src/utils/: check_table_exists.py
tests/db_connection/: test_ts_db_conn.py
